// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`macros 1. client-side: 1. client-side 1`] = `


import { useSSRComputation } from "../lib/index.macro"
const x = useSSRComputation("./a.ssr-computation")
    

      ↓ ↓ ↓ ↓ ↓ ↓

import __a from "./a.ssr-computation";
import useSSRComputation_Server from "use-ssr-computation.runtime/lib/useSSRComputation_Server";
const x = useSSRComputation_Server(__a, "./a.ssr-computation");

`;

exports[`macros 1. no usage: 1. no usage 1`] = `

import { useSSRComputation } from "../lib/index.macro"

      ↓ ↓ ↓ ↓ ↓ ↓



`;

exports[`macros 2. server-side: 2. server-side 1`] = `


import { useSSRComputation } from "../lib/index.macro"
const x = useSSRComputation("./a.ssr-computation");
    

      ↓ ↓ ↓ ↓ ↓ ↓

import useSSRComputation_Client from "use-ssr-computation.runtime/lib/useSSRComputation_Client";
const x = useSSRComputation_Client(
  () => import("./a.ssr-computation"),
  "./a.ssr-computation",
);

`;

exports[`macros 3. multiple-imports: 3. multiple-imports 1`] = `


import { useSSRComputation } from "../lib/index.macro"
const x = useSSRComputation("./a.ssr-computation")
const y = useSSRComputation("./a.ssr-computation")
    

      ↓ ↓ ↓ ↓ ↓ ↓

import useSSRComputation_Client from "use-ssr-computation.runtime/lib/useSSRComputation_Client";
const x = useSSRComputation_Client(
  () => import("./a.ssr-computation"),
  "./a.ssr-computation",
);
const y = useSSRComputation_Client(
  () => import("./a.ssr-computation"),
  "./a.ssr-computation",
);

`;
